argocd/apps/services/manifests/minekube-gate/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: gate.aryat.io
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
  name: minekube-gate
  namespace: minecraft
spec:
  ports:
  - name: minecraft
    port: 25565
    protocol: TCP
    targetPort: minecraft
  selector:
    app: minekube-gate
