argocd/apps/services/manifests/minekube-gate/test-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gate
  name: servers
  namespace: minecraft
spec:
  ports:
  - name: minecraft
    port: 25565
    targetPort: minecraft
  selector:
    app: gate
