argocd/apps/services/manifests/minekube-gate/tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: gate.aryat.io
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
  name: minekube-gate
  namespace: minecraft
spec:
  parentRefs:
    - name: tcp-gateway
      sectionName: minecraft-gateway
      namespace: gateway
      kind: Gateway
  rules:
     - backendRefs:
        - name: minekube-gate
          namespace: minecraft
          port: 25565
